--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "next": "15.0.3",
+    "openai": "^4.73.0",
     "pg": "^8.13.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
